# algorank

./: .algokit.toml  README.md  algorank.code-workspace
.algokit/: .copier-answers.yml
projects/algorank-contracts/: .algokit.toml  README.md  pyproject.toml  verifier.py
projects/algorank-contracts/.algokit/: .copier-answers.yml
projects/algorank-contracts/smart_contracts/artifacts/election/: Election.approval.puya.map  Election.approval.teal  Election.arc56.json  election_client.py
projects/algorank-contracts/smart_contracts/election/: contract.py  deploy_config.py
projects/algorank-frontend/: .algokit.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
projects/algorank-frontend/.algokit/: .copier-answers.yml
projects/algorank-frontend/src/: Home.tsx
projects/algorank-frontend/src/components/: Account.tsx  AppCalls.tsx  ConnectWallet.tsx  CreateBallot.tsx  KMDAccountSwitcher.tsx  Register.tsx  Tally.tsx
projects/algorank-frontend/src/contracts/: Election.ts
projects/algorank-frontend/src/utils/: fundLocalnet.ts  pinata.ts  zk.ts
projects/ranked-voting-api/: Cargo.toml
projects/ranked-voting-api/src/: cors.rs  main.rs  ranked-voting.rs  ranked_voting.rs
