[package]
name = "ranked-voting-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
merlin = "3.0.0"
ark-ec = "^0.4.0"
ark-ff = "^0.4.0"
ark-bls12-381 = "^0.4.0"
ark-std = "^0.4.0"
ark-serialize = { version = "^0.4.0", features = ["derive"] }
curdleproofs = { git = "https://github.com/asn-d6/curdleproofs.git", branch = "main" }
bincode = "1.3.3"
serde = "1.0.219"
base64 = "0.22"
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
